Creature removal added and major optimizations
-removed playable feature for less complexity and replaced with a PLAYER_INDEX constant.
-created CreatureMap struct
-created alive and count functions.
-optimized iterations.
-allowed removal and death of creatures with Option<Creature> implementation.
-corrected impossible example shown in command usage (goblin1)
-debug commands added.
-for now features have been disabled, they will be enabled in the next commit.
-added underscores in between player's name: "human_warrior"
-next commit will start allocating creatures in None entries on the vector and will re-implement features.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "extremely-simple-roguelike"
+name = "simple-roguelike"
 version = "0.1.0"
 authors = ["Sinono3 <thesprinter79@gmail.com>"]
 edition = "2018"
