--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,8 @@ edition = "2018"
 
 [dependencies]
 crossterm = "0.5.0"
-specs = { version = "*", features = ["serde"] }
+specs = { version = "0.14.1", features = ["serde"] }
 specs-derive = "0.3.0"
 serde = "1.0.82"
 serde_derive = "1.0.82"
-ron = "*" #serde_json = "1.0.33"
+ron = "*"
