--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,12 @@ authors = ["Sinono3 <thesprinter79@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+anymap = "*"
 crossterm = "0.5.0"
+
 specs = { version = "0.14.1", features = ["serde"] }
 specs-derive = "0.3.0"
+
 serde = "1.0.82"
 serde_derive = "1.0.82"
-ron = "*"
+serde_json = "*"
